<resources>
    <string name="app_name">Wat kan ik aan?</string>
    <string name="app_name_param">Wat kan ik %1$s aan?</string>
    <string name="jacket_cold">Winterjas</string>
    <string name="jacket_normal">Tussenjas</string>
    <string name="jacket_warm">Zomerjas</string>
    <string name="bottom_shorts">Korte broek</string>
    <string name="bottom_long">Lange broek</string>
    <string name="none">Geen</string>
    <string name="top_dress">Jurkje</string>
    <string name="top_tshirt">T-Shirt</string>
    <string name="top_vest">Dun vest</string>
    <string name="top_long_shirt">Lang shirt</string>
    <string name="top_sweater">Trui</string>
    <string name="extra_rain">Neem ook een paraplu mee of doe regenkleding aan.</string>
    <string name="extra_rain_windy">Doe ook een regenbroek/jas aan. Een paraplu waait weg.</string>
    <string name="extra_sunny">Vergeet je niet goed in te smeren.</string>
    <string name="extra_muggy">Het is extreem benauwd buiten.</string>
    <string name="extra_freezing">Doe eventueel ook een muts op, sjaal om en handschoenen aan.</string>
    <string name="now">Nu</string>
    <string name="today">Straks</string>
    <string name="tomorrow">Morgen</string>
    <string name="day_after_tomorrow">Overmorgen</string>
    <string name="last_updated">Laatste update: %1$s</string>
    <string name="last_updated_empty">Laatste update: Geen</string>
    <string name="temperature">%1$s°C</string>
    <string name="menu_settings">Instellingen</string>
    <string name="title_settings">Instellingen</string>

    <string name="preferences_app_version_title">App versie</string>
    <string name="preferences_display_dark_mode">Donkere modus</string>
    <string name="preferences_display_header">Weergave</string>
    <string name="preferences_profile_header">Profiel</string>
    <string name="preferences_about_header">Over</string>
    <string name="preferences_display_theme">Thema</string>

    <string name="preferences_profile_thermoception">Thermoceptie</string>
    <string-array name="thermoception_items">
        <item>@string/thermoception_label_cold</item>
        <item>@string/thermoception_label_normal</item>
        <item>@string/thermoception_label_warm</item>
    </string-array>
    <string-array name="thermoception_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="thermoception_label_cold">Ik heb het snel koud</string>
    <string name="thermoception_label_normal">Normaal</string>
    <string name="thermoception_label_warm">Ik heb het snel warm</string>
    <string name="preferences_rate_app">Beoordeel deze app</string>

    <string-array name="legacy_theme_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="legacy_theme_items">
        <item>@string/theme_label_yellow</item>
        <item>@string/theme_label_blue</item>
        <item>@string/theme_label_red</item>
        <item>@string/theme_label_green</item>
    </string-array>

    <string-array name="theme_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="theme_items">
        <item>@string/theme_label_default</item>
        <item>@string/theme_label_yellow</item>
        <item>@string/theme_label_blue</item>
        <item>@string/theme_label_red</item>
        <item>@string/theme_label_green</item>
    </string-array>
    <string name="theme_label_default">Volg systeem</string>
    <string name="theme_label_yellow">Geel</string>
    <string name="theme_label_blue">Blauw</string>
    <string name="theme_label_red">Rood</string>
    <string name="theme_label_green">Groen</string>

    <string name="preferences_profile_gender">Geslacht</string>
    <string-array name="gender_items">
        <item>@string/gender_label_other</item>
        <item>@string/gender_label_man</item>
        <item>@string/gender_label_woman</item>
    </string-array>
    <string-array name="gender_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="gender_label_other">Anders</string>
    <string name="gender_label_man">Man</string>
    <string name="gender_label_woman">Vrouw</string>

    <string-array name="night_mode_items">
        <item>@string/night_mode_label_auto</item>
        <item>@string/night_mode_label_off</item>
        <item>@string/night_mode_label_on</item>
    </string-array>
    <string-array name="night_mode_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="night_mode_label_auto">Volg systeem</string>
    <string name="night_mode_label_off">Uit</string>
    <string name="night_mode_label_on">Aan</string>
    <string name="jacket_cold_rain">Waterdichte winterjas</string>
    <string name="jacket_normal_rain">Regenjas</string>
    <string name="jacket_warm_rain">Dunne regenjas of poncho</string>
    <string name="location">Locatie: %1$s</string>
    <string name="location_empty">Locatie: Onbekend</string>
    <string name="preferences_profile_age">Leeftijd</string>
    <string name="location_not_found">Geen locatie gevonden</string>
    <string name="location_permissions">Geen locatie permissies</string>
    <string name="location_settings">Instellingen</string>
    <string name="review_flow_done">Bedankt dat je ons laat weten wat je ervan vindt!</string>
    <string name="error_generic">Er is iets fout gegaan</string>
    <string name="label_movement">Beweging</string>
    <string name="label_day">Dag</string>
    <string name="chip_movement_rest">Rust</string>
    <string name="chip_movement_light">Licht</string>
    <string name="chip_movement_heavy">Zwaar</string>
    <string name="alert_dialog_forecast_title">Vooruitzicht %1$s</string>
    <string name="alert_dialog_forecast_msg_temp">Gevoelstemperatuur: %1$.1f</string>
    <string name="alert_dialog_forecast_msg_rain">Kans op regen: %1$d%%</string>
    <string name="alert_dialog_forecast_msg_sun">Kans op zon: %1$d%%</string>
    <string name="alert_dialog_forecast_msg_wind">Windkracht: %1$d</string>
    <string name="alert_dialog_forecast_msg_sunup">Zonsopkomst om: %1$d:00</string>
    <string name="alert_dialog_forecast_msg_sununder">Zonsondergang om: %1$d:00</string>

</resources>