<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/preferences_profile_header">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/thermoception_items"
            android:entryValues="@array/thermoception_values"
            app:iconSpaceReserved="false"
            app:key="profile_thermoception"
            app:title="@string/preferences_profile_thermoception" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/preferences_display_header">

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/night_mode_items"
            android:entryValues="@array/night_mode_values"
            app:iconSpaceReserved="false"
            app:key="dark_mode_key"
            app:title="@string/preferences_display_dark_mode" />

        <ListPreference
            android:defaultValue="0"
            app:iconSpaceReserved="false"
            app:key="theme_key"
            app:title="@string/preferences_display_theme" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/preferences_about_header">

        <Preference
            android:key="preferences_app_version_key"
            android:summary="@string/versionName"
            android:title="@string/preferences_app_version_title"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="preferences_rate_app_key"
            android:title="@string/preferences_rate_app"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
